--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
                 <img src="assest/img/Logo_Marvel_Comics.png" alt="">
                 <ul>
                     <li>
-                        <a href="/" id="home">Home</a>
+                        <a href="home.html" id="home">Home</a>
                     </li>
                 </ul>
             </div>
